--- a/client/theme/less/theme.import.less
+++ b/client/theme/less/theme.import.less
@@ -151,6 +151,10 @@ button{
     }
 }
 
+.accelerate{
+    backface-visibility: hidden;
+    //transform: translateZ(0);
+}
 
 // Generic hide property
 .hide, .hidden { display: none; }
